--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 -title: "My First Blog Post"
-date: 2022-05-10
+date: 2022-05-10 -
 theme: minima
 author: Kennedy Geedey
-email: kennedy.a.geedey@outlook.com -
+email: kennedy.a.geedey@outlook.com
